--- a/src/components/Root/Root.css
+++ b/src/components/Root/Root.css
@@ -68,7 +68,7 @@
     display: block;
     content: '';
     background-color: #000;
-    z-index: 2;
+    z-index: 6;
     }
 
   .Root--ios .Root__view--show-back::after {
